--fixed color bug on small device width

--- a/basic.css
+++ b/basic.css
@@ -259,9 +259,6 @@ a{
 							"C"
 							"D";
 	}
-	ul {
-		border-color     : black;
-	}
 	h1 {
 	text-decoration : none;
 	line-height      : 25px;
